
2002-01-09 Michael Still mikal@stillhq.com
	Implemented the rest of the page layout commands.

2002-01-10 Michael Still mikal@stillhq.com
	Implemented page durations. This doesn't work properly yet...

2002-01-12 Michael Still mikal@stillhq.com
	Implemented page transitions effects. There are now 17 page transition effects available if you wanted to build PDFs into presentations.

2002-01-24 Michael Still mikal@stillhq.com
	Finished implementing the new database style dictionary for objects... This is slightly slower than the in memory option, but can probably be sped up later on and is much nicer...

2002-01-25 Michael Still mikal@stillhq.com
	Removed the unused panda_objectarray structure...

2002-01-25 Michael Still mikal@stillhq.com
	Implemented the image reuse detection code. This means that if you have an image named foo.tif, and use it more than once in the document, it is only stored once in the PDF file that is generated. This is faster and makes smaller PDF documents. You can still force panda to give you two copies of the image in the PDF by using the panda_imageboxrotactual() call -- this might be of use when you know that foo.tif at 10am doesn't equal foo.tif at 10:01am...

2002-01-26 Michael Still mikal@stillhq.com
	Fixed the viewer preference stuff, which had been broken since the way in which dictionaries worked changed...

2002-02-16 Michael Still mikal@stillhq.com
	Documentation fixes

2002-02-17 Michael Still mikal@stillhq.com
	Got templates working
	
2002-03-10 Michael Still mikal@stillhq.com
	Rolled in the new windows patches

2002-05-01 Michael Still mikal@stillhq.com
	Fixed tdb.h install bug

2002-07-09 Michael Still mikal@stillhq.com
	Fixed textboxes bug

2003-04-25 Michael Still mikal@stillhq.com
	Fixed a bug in panda_streamprintf which meant that complex graphical streams caused a segmentation fault.

2003-05-28 Evan Nemerson evan@coeus-group.com
	Fix a bug causing an endless loop in textboxes.